2004-07-16 Tanya Wolff

	Fix for 70543: TVT: Source code displaying in C++ Font and Editor
	* plugin.properties
	
2004-07-20 Alain Magloire

	Framework to do virtual grouping in the outliner
	for example group the includes.

	* icons/full/obj16/incc_obj.gif
	* src/org/eclipse/cdt/internal/ui/CPluginImages.java
	* src/org/eclipse/cdt/internal/ui/actions/ActionMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlineProvider.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/PreferenceConstants.java
	
2004-07-19 Chris Wiebe
	This patch cleans up code using the ToggleLinkingAction
	(subclass off AbstractToggleLinkingAction).

	* browser/org/eclipse/cdt/internal/ui/browser/cbrowsing/CBrowsingPart.java
	* browser/org/eclipse/cdt/internal/ui/browser/cbrowsing/ToggleLinkingAction.java

	* src/org/eclipse/cdt/internal/ui/cview/MainActionGroup.java
	* src/org/eclipse/cdt/internal/ui/cview/ToggleLinkingAction.java
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java

2004-07-16 Tanya Wolff

	Fix for 70221: unexternalized strings
	* org.eclipse.cdt.internal.ui/search/CountLabelProvider.java
	* org.eclipse.cdt.internal.ui/search/CSearchMessages.properties

2004-07-16 Vladimir Hirsl
	Implementation of HP-UX SOM binary parser page.
 
	* src/org/eclipse/cdt/ui/dialogs/AbstractGNUBinaryParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/GNUSomBinaryParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/GNUElfBinaryParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/GNUXCoffBinaryParserPage.java

2004-07-16 Chris Wiebe

	Fixing numerous warnings.

2004-07-15 Tanya Wolff

	Fix for 70124: unexternalized strings
	* org.eclipse.cdt.ui.wizards.conversion/ConvertProjectWizardPage.java
	* org.eclipse.cdt.internal.ui/CUIMessages.properties
	Fix for 70143: duplicate mnemonics in binary parser options