@@ -1,3 +1,9 @@
+2004-07-23 Alain Magloire
+
+	Support for addInclude action, implementation base
+	on the indexer.
+	* src/org/eclipse/cdt/internal/ui/editor/AddIncludeOnSelectionAction.java
+
 2004-07-16 Tanya Wolff
 
 	Fix for 70543: TVT: Source code displaying in C++ Font and Editor
